--- a/WebManagementApp/Views/Shared/_Layout.cshtml
+++ b/WebManagementApp/Views/Shared/_Layout.cshtml
@@ -11,6 +11,8 @@
     <link href="~/assets/img/newlogo.jpg" rel="icon">
     <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
+
+
     <title>@ViewData["Title"] | Greenwize</title>
     
     <partial name="_PluginStylesPartial" />
@@ -67,6 +69,34 @@
                 <a class="nav-link collapsed" asp-controller="Dashboard" asp-action="Index">
                     <i class="bi bi-grid"></i><span>Dashboard</span>
                 </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link collapsed" data-bs-target="#masterPage-nav" data-bs-toggle="collapse" href="#">
+                    <i class="bi bi-folder"></i><span>Master Page</span><i class="bi bi-chevron-down ms-auto"></i>
+                </a>
+                <ul id="masterPage-nav" class="nav-content collapse" data-bs-parent="#sidebar-nav">
+                    <li>
+                        <a class="nav-link" asp-controller="Brand" asp-action="Index">
+                            <i class="bi bi-circle"></i><span>Brand Page</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="nav-link" asp-controller="Category" asp-action="Index">
+                            <i class="bi bi-circle"></i><span>Category Page</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="nav-link" asp-controller="Supplier" asp-action="Index">
+                            <i class="bi bi-circle"></i><span>Supplier Page</span>
+                        </a>
+                    </li>
+                    
+                    <li>
+                        <a class="nav-link" asp-controller="ShippingLabel" asp-action="Index">
+                            <i class="bi bi-circle"></i><span>Shipping Label Page</span>
+                        </a>
+                    </li>
+                </ul>
             </li>
             <li class="nav-item">
                 <a class="nav-link collapsed" data-bs-target="#masterSKU-nav" data-bs-toggle="collapse" href="#">
@@ -235,7 +265,7 @@
                     </li>
                 </ul>
                 
-            </li>            
+            </li>   
         </ul>
 
     </aside><!-- End Sidebar-->
