Update page name

--- a/WebManagementApp/Views/PurchaseOrder/PurchaseOrder.cshtml
+++ b/WebManagementApp/Views/PurchaseOrder/PurchaseOrder.cshtml
@@ -5,7 +5,7 @@
 }
 
 @{
-    var editPurchaseOrderUrl = Url.Action("UpdatePurchaseOrderDemo", "PurchaseOrder");
+    var editPurchaseOrderUrl = Url.Action("UpdatePurchaseOrderNew", "PurchaseOrder");
 }
 
 @{
