--- a/WebManagementApp/Views/PurchaseOrder/UpdatePurchaseOrderNew.cshtml
+++ b/WebManagementApp/Views/PurchaseOrder/UpdatePurchaseOrderNew.cshtml
@@ -66,7 +66,7 @@
 
 
 <div class="card">
-    <form asp-controller="PurchaseOrder" asp-action="UpdatePurchaseOrderDemo" class="needs-validation" method="post" id="updatepurchaseOrderForm" enctype="multipart/form-data" novalidate>
+    <form asp-controller="PurchaseOrder" asp-action="UpdatePurchaseOrderNew" class="needs-validation" method="post" id="updatepurchaseOrderForm" enctype="multipart/form-data" novalidate>
         @Html.HiddenFor(m => m.idPurchaseOrder)
         @Html.HiddenFor(m => m.SupplierName)
         <div class="card-body">
